[package]
name = "alsa-sys"
version = "0.1.1"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>",
"David Henningsson <diwic@ubuntu.com>"]
build = "build.rs"
description = "FFI bindings for the ALSA project (Advanced Linux Sound Architecture)"
license = "MIT"
links = "alsa"
repository = "https://github.com/diwic/alsa-sys"
documentation = "http://docs.rs/alsa-sys"
keywords = ["ALSA", "audio", "sound"]
categories = ["os::unix-apis", "external-ffi-bindings", "multimedia::audio"]

[dependencies]
libc = "0.2.7"

[build-dependencies]
pkg-config = "0.3"
